# dio-twitter-py

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
frontend/: app.js  index.html  styles.css
src/: connection.py  services.py
